Fixed scroll bar whitespace

--- a/static/storystyle.css
+++ b/static/storystyle.css
@@ -28,7 +28,7 @@ html, body {
   position: relative;
   grid-template-columns: 2% repeat(4, 1fr) 2%;
   grid-template-rows: 1fr;
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
   width: 100%;
   height: 85%;
@@ -36,13 +36,16 @@ html, body {
   border-bottom: 2px solid rgb(0, 128, 255);
 }
 
+.kan-col hr {
+  border-radius: 50%;
+}
+
 .kan-col {
   width: 100%;
   min-width: 600px;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
-
 }
 
 .kan-col-header {
